# AI-EMPLOYEE

./: .gitignore  .mcp.json  CLAUDE.md  PLATINUM_BUSINESS_REQUIREMENTS.md  PLATINUM_PLAN.md  PROJECT_PROGRESS.md  README.md  TWITTER_API_STATUS.md  docker-compose.yml  get_token.py
ai_employee_scripts/: .env.example  .gitignore  README.md  ecosystem.aws.config.js  ecosystem.cloud.config.js  ecosystem.config.js  ecosystem.local.config.js  error_recovery.py  main.py  orchestrator.py  pyproject.toml  run_cloud.py  start_orchestrator.sh  stop_pm2.sh  test_agents_sdk.py  test_cloud_agent.py  test_cloud_orchestrator.py  test_email_simple.py  test_glm_direct.py  vault_sync.py  watchdog.py
ai_employee_scripts/cloud/: __init__.py  api_server.py  cloud_orchestrator.py
ai_employee_scripts/cloud/agents/: __init__.py  base_agent.py  email_agent.py  finance_agent.py  models.py  social_agent.py  triage_agent.py
ai_employee_scripts/cloud/bots/: base_agent.py  email_agent.py  (+3 more)
ai_employee_scripts/cloud_data/: processed_emails.db
ai_employee_scripts/cloud_watchers/: __init__.py  base_cloud_watcher.py  gmail_watcher.py  linkedin_watcher.py
ai_employee_scripts/mcp_servers/: __init__.py  gmail_mcp.py  linkedin_api_mcp.py  linkedin_mcp.py  meta_mcp.py  odoo_mcp.py  twitter_mcp.py
ai_employee_scripts/scripts/: linkedin_cron_trigger.py  meta_cron_trigger.py  twitter_cron_trigger.py  weekly_cron_trigger.py
ai_employee_scripts/shared/: __init__.py  dedup_client.py
ai_employee_scripts/watchers/: base_watcher.py  filesystem_watcher.py  gmail_watcher.py  linkedin_watcher.py
(+148 files in other folders)
